--- a/PG4500_2016_Exam1.csproj
+++ b/PG4500_2016_Exam1.csproj
@@ -52,7 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Robocode\State.cs" />
     <Compile Include="States\Attack.cs" />
-    <Compile Include="States\Escape.cs" />
+    <Compile Include="States\EvasiveMode.cs" />
     <Compile Include="States\Search.cs" />
   </ItemGroup>
   <ItemGroup />
